# serverless-benchmarks

./: .black.toml  .dockerignore  .flake8.cfg  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .tuff.toml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE.md  MANIFEST.in  QUICKSTART_SONATAFLOW.md  README.md  black.toml  build.py  build.sh  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  experiments.json  experiments_sebd-610.gen-python-3.11.json  experiments_sebd-6100.1000-genome-python-3.11.json  experiments_sebd-6101.1000-genome-individuals-python-3.11.json  experiments_sebd-620.func-invo-python-3.11.json  experiments_sebd-6200.trip-booking-python-3.11.json  experiments_sebd-630.parallel-sleep-python-3.11.json  experiments_sebd-631.parallel-download-python-3.11.json  experiments_sebd-640.selfish-detour-python-3.11.json  experiments_sebd-650.vid-python-3.11.json  experiments_sebd-660.map-reduce-python-3.11.json  experiments_sebd-670.auth-python-3.11.json  experiments_sebd-680.excamera-python-3.11.json  experiments_sebd-690.ml-python-3.11.json  flake8.cfg  generate.sh  install.py  install.sh  linting.py  (+23 more)
benchmarks/: CMakeLists.txt  __init__.py  cpp_benchmarks.cpp
benchmarks/000.microbenchmarks/010.sleep/: config.json  input.py
benchmarks/000.microbenchmarks/020.adjustsleep/: input.py
benchmarks/000.microbenchmarks/020.network-benchmark/: config.json  input.py
benchmarks/000.microbenchmarks/030.clock-synchronization/: config.json  input.py
benchmarks/000.microbenchmarks/040.server-reply/: config.json  input.py
benchmarks/000.microbenchmarks/050.gpu-cache-latency/: Dockerfile  config.json  configs.json  gpu_cache_bench  gpu_cache_bench.cu  handler.py  input.py  read.me  run_sweep.py
benchmarks/000.microbenchmarks/050.matmul/: input.py
benchmarks/000.microbenchmarks/051.communication.storage/: config.json
benchmarks/000.microbenchmarks/054.communication.tcp/: config.json
benchmarks/000.microbenchmarks/060.wrap-divergence/: config.json  input.py
benchmarks/000.microbenchmarks/0xx.host-device-copy/: input.py
benchmarks/000.microbenchmarks/0xx.vector-add/: input.py
benchmarks/100.webapps/110.dynamic-html/: README.md  config.json  input.py
benchmarks/100.webapps/120.uploader/: README.md  config.json  input.py
benchmarks/100.webapps/130.airline-booking/: config.json  input.py
benchmarks/100.webapps/130.crud-api/: README.md  config.json  input.py
benchmarks/200.multimedia/210.thumbnailer/: README.md  config.json  input.py
benchmarks/200.multimedia/220.video-processing/: README.md  config.json  init.sh  input.py
benchmarks/200.multimedia/220.video-processing-gpu/: init.sh  input.py
benchmarks/200.multimedia/225.video-watermarking-gpu/: Dockerfile  Dockerfile.cpu  gpu_bench.py  read.me  run.sh
benchmarks/300.utilities/311.compression/: README.md  config.json  input.py
benchmarks/300.utilities/312.converter/: config.json  input.py
benchmarks/300.utilities/312.ocr/: init.sh  input.py
benchmarks/300.utilities/320.monte-carlo-pi/: config.json  input.py
benchmarks/300.utilities/321.pdf-generator/: config.json  input.py
benchmarks/400.inference/411.image-recognition/: README.md  config.json  input.py
benchmarks/400.inference/412.language-bert/: input.py
benchmarks/400.inference/413.image-classification/: input.py
benchmarks/400.inference/413.recommendation/: config.json  input.py
benchmarks/400.inference/420.prediction-reviews/: config.json  input.py
benchmarks/400.inference/421.image-captioning/: config.json  input.py
benchmarks/400.inference/430.feature-gen/: config.json  input.py
benchmarks/400.inference/recognition-vgg19/: config.json  input.py
benchmarks/500.scientific/501.graph-pagerank/: README.md  config.json  input.py
benchmarks/500.scientific/502.graph-mst/: README.md  config.json  input.py
benchmarks/500.scientific/503.graph-bfs/: README.md  config.json  input.py
benchmarks/500.scientific/504.dna-visualisation/: README.md  config.json  input.py
benchmarks/500.scientific/505.map-reduce/: config.json  input.py
benchmarks/500.scientific/599.npbench/: input.py
benchmarks/500.scientific/5xx.channel_flow_jax_npbench/: input.py
benchmarks/500.scientific/5xx.compute_jax_npbench/: input.py
benchmarks/500.scientific/5xx.deep_learning_resnet_jax_npbench/: input.py
benchmarks/500.scientific/5xx.stockham_fft_jax_npbench/: input.py
benchmarks/600.java/601.hello-world/: config.json  input.py
benchmarks/600.java/602.login-checker/: config.json  input.py
benchmarks/600.java/603.train-recommender/: input.py
benchmarks/600.linearalgebra/605.lu/: input.py
benchmarks/600.linearalgebra/606.spmv/: input.py
benchmarks/600.linearalgebra/607.fw/: input.py
benchmarks/600.workflows/610.gen/: definition.json  input.py
benchmarks/600.workflows/6100.1000-genome/: README.md  config.json  definition.json  input.py
benchmarks/600.workflows/6101.1000-genome-individuals/: config.json  definition.json  input.py
benchmarks/600.workflows/620.func-invo/: definition.json  input.py
benchmarks/600.workflows/620.func_invo/: definition.json  input.py
benchmarks/600.workflows/6200.trip-booking/: config.json  definition.json  input.py
benchmarks/600.workflows/630.parallel/: definition.json  input.py
benchmarks/600.workflows/630.parallel-sleep/: config.json  definition.json  input.py
benchmarks/600.workflows/630.parallel_sleep/: definition.json  input.py
benchmarks/600.workflows/6300.sda-workflow/: .gitignore  README.md  config.json  definition.json  input.py
benchmarks/600.workflows/631.parallel-download/: config.json  definition.json  input.py
benchmarks/600.workflows/640.selfish-detour/: config.json  definition.json  input.py  selfish-detour.c
benchmarks/600.workflows/650.vid/: LICENSE  README.md  config.json  definition.json  input.py
benchmarks/600.workflows/660.map-reduce/: config.json  definition.json  input.py
benchmarks/600.workflows/670.auth/: config.json  definition.json  input.py
benchmarks/600.workflows/680.excamera/: README.md  (+3 more)
benchmarks/meta/: composer.py
(+1085 files in other folders)
