[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-benchmarks"
version = "1.2.0"
description = "Serverless Benchmark Suite"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    {name = "Marcin Copik", email = "marcin.copik@inf.ethz.ch"}
]
keywords = ["serverless", "faas", "benchmark", "lambda", "azure-functions", "cloud-computing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Distributed Computing",
]

# Core dependencies
dependencies = [
    # Core framework
    "testtools>=2.4.0",
    "docker>=4.2.0",
    "tzlocal>=2.1",
    "requests",
    "pandas>=1.1.3",
    "numpy",
    "scipy",
    "pycurl>=7.43",
    "click>=7.1.2",
    "rich",
    # needed for storage deployment
    "minio==5.0.10",
    "boto3"
]

# Optional dependencies for cloud providers and developers
[project.optional-dependencies]
aws = [
    "botocore",
    "urllib3",
    "boto3-stubs[apigatewayv2,ecr,iam,lambda,logs,s3,sts]"
]
azure = [
    "azure-storage-blob==12.10.0",
    "azure-cosmos"
]
gcp = [
    "grpcio",
    "google-cloud-storage>=1.32.0",
    "google-api-python-client>=1.12.5",
    "google-cloud-monitoring>=2.0.0",
    "google-api-python-client-stubs",
    "google-cloud-logging>=2.0.0",
    "google-cloud-datastore",
    "google-cloud-build>=3.35.0"
]
openwhisk = []
all = [
    "boto3", "botocore", "urllib3", "boto3-stubs[apigatewayv2,ecr,iam,lambda,logs,s3,sts]",
    "azure-storage-blob==12.10.0", "azure-cosmos",
    "grpcio", "google-cloud-storage>=1.32.0", "google-api-python-client>=1.12.5", 
    "google-cloud-monitoring>=2.0.0", "google-api-python-client-stubs", 
    "google-cloud-logging>=2.0.0", "google-cloud-datastore", "google-cloud-build>=3.35.0",
    "minio==5.0.10"
]
dev = [
    "flake8",
    "black==22.8.0",
    "mypy",
    "types-pycurl",
    "types-requests",
    "types-PyYAML",
    "types-urllib3",
    "interrogate==1.7.0",
    "boto3-stubs[lambda,s3,apigatewayv2,sts,logs,iam,ecr]"
]
docs = [
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==4.0.1",
    "sphinxcontrib-mermaid==2.0.0"
]

[project.scripts]
sebs = "sebs.cli:main"

[project.urls]
Homepage = "https://github.com/spcl/serverless-benchmarks"
Repository = "https://github.com/spcl/serverless-benchmarks"
Issues = "https://github.com/spcl/serverless-benchmarks/issues"
Documentation = "https://sebs.readthedocs.io"

[tool.setuptools]
# Use both auto-discovery and explicit package mapping
packages = [
    "sebs",
    "sebs.aws",
    "sebs.azure",
    "sebs.gcp",
    "sebs.local",
    "sebs.openwhisk",
    "sebs.faas",
    "sebs.storage",
    "sebs.experiments",
    "sebs.benchmarks",
    "sebs.dockerfiles",
    "sebs.configs",
    "sebs.tools",
]

# Map top-level directories to sebs subpackages
[tool.setuptools.package-dir]
"sebs.benchmarks" = "benchmarks"
"sebs.dockerfiles" = "dockerfiles"
"sebs.configs" = "configs"
"sebs.tools" = "tools"

[tool.setuptools.package-data]
# Include all necessary non-Python files
sebs = ["py.typed"]
"sebs.configs" = ["systems.json"]
"sebs.benchmarks" = [
    "**/*.py",
    "**/*.js",
    "**/*.cpp",
    "**/*.hpp",
    "**/*.json",
    "**/*.java",
    "**/*.xml",
    "**/*.txt",
    "**/*.sh",
    "**/*.html",
    "**/*.png",
    "**/*.md",
    "**/Dockerfile*",
    "**/requirements.txt.*",
    "**/package.json.*",
    "**/CMakeLists.txt",
]
"sebs.dockerfiles" = [
    "**/*",
]
"sebs.tools" = [
    "**/*.py",
]

