[package]
name = "sleep-benchmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

# Note: This Cargo.toml only contains benchmark-specific dependencies.
# Wrapper dependencies (lambda_http, aws-sdk-*, etc.) are provided by the wrapper Cargo.toml
# and will be merged during the build process.

[dependencies]
# Benchmark-specific dependencies only
# serde is already in wrapper, but we can override features if needed
serde = { version = "1.0", features = ["derive"] }
