[package]
name = "aws-lambda-wrapper"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# Pin AWS SDK versions to support Rust 1.87
# Versions 1.1.x are the last to support Rust 1.87, 1.2+ requires Rust 1.88
# Use version range that excludes 1.2+ (which requires Rust 1.88)
aws-config = ">=1.0, <1.2"
aws-sdk-s3 = ">=1.0, <1.2"
aws-sdk-dynamodb = ">=1.0, <1.2"
uuid = { version = "1.4", features = ["v4"] }

